--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "husky": "^1.0.0-rc.2",
     "inquirer": "^6.0.0",
     "is-empty-object": "^1.1.1",
-    "jquery": ">=2.2.0",
+    "jquery": "^3.3.1",
     "js-yaml": "^3.8.4",
     "mocha": "^5.0.5",
     "mocha-headless-chrome": "^2.0.0",
