--- a/package.json
+++ b/package.json
@@ -110,7 +110,14 @@
     "yargs": "^13.3.0"
   },
   "resolutions": {
-    "puppeteer": "^1.11.0"
+    "puppeteer": "^1.11.0",
+    "glob-parent": "^5.1.2",
+    "yargs-parser": "^20.2.4",
+    "marked": "^2",
+    "node-sass": "^6.0.1",
+    "lodash": "^4.17.21",
+    "minimist": "^1.2.3",
+    "dot-prop": "^5.2.0"
   },
   "engines": {
     "node": ">=8.4.0"
