--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   "resolutions": {
     "puppeteer": "^1.11.0",
     "glob-parent": "^5.1.2",
+    "yargs-parser": "^20.2.9",
     "marked": "^2",
     "node-sass": "^6.0.1",
     "lodash": "^4.17.21",
